[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Mattias Buelens <mattias@buelens.com>"]
edition = "2021"
rust-version = "1.65"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
lazy_static = "1.4.0"
pathfinding = "4.0.0"
itertools = "0.10.5"
